feat: generate doc with swagger
